fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,8 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-
 	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 a {
@@ -105,6 +105,17 @@ input::placeholder {
 		transform: translateY(0);
 		opacity: 1;
 	}
+}
+
+
+
+.App{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	display: flex;
+    flex-direction: column;
+
 }
 
 @keyframes moveLeft {
